<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn1"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />



            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn2"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn3"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/plus"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn4"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn5"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn6"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/minus"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="30sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn7"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn8"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn9"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/times"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/times"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/clear"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/btn0"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/dot"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/divide"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:text="@string/equal"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:textSize="24sp"
                />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/text_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter value"
        android:gravity="right"
        android:textSize = "40dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>